# mcm

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  deny.toml  ecosystem.config.js
.omo/: boulder.json
.omo/drafts/: hmcl-parity-correction-backlog.md  hmcl-parity-version-install-correction.md  mcm-dyyl-launcher-redesign-v2.md  mcm-dyyl-launcher-redesign.md  mcm-minecraft-manager-expansion.md  minecraft-manager-expansion.md
.omo/evidence/: f1-plan-compliance-hmcl-parity-correction-backlog.md  f1-plan-compliance-mcm-dyyl-launcher-redesign-v2.md  f3-real-qa-hmcl-parity-correction-backlog.md  (+65 more)
docs/: AGPL-COMPLIANCE.md  CLEAN-ROOM-POLICY.md
src/: app.rs  auth.rs  auth_cmd.rs  auth_microsoft.rs  cli.rs  config.rs  confirmation.rs  dyyl_host.rs  game_cmd.rs  game_install.rs  game_model.rs  i18n.rs  install.rs  jar_info.rs  launch.rs  lib.rs  lifecycle.rs  loader_install.rs  lock.rs  main.rs  mc_target.rs  mcm_package.rs  memory.rs  modpack_import.rs  pkg_auth.rs  pkg_cmd.rs  pkg_install.rs  profile_cmd.rs  provider.rs  queries.rs  run_cmd.rs  runtime.rs  runtime_cmd.rs  safety.rs  share_client.rs  source_cmd.rs  source_index.rs  source_resolve.rs  upgrade.rs  upgrade_deps.rs  (+5 more)
tests/: characterization.rs  confirmation.rs  download.rs  game_config.rs  game_install.rs  help.rs  mc_target.rs  mcm_package.rs  modpack_import.rs  mvp.rs  pkg_auth.rs  pkg_cmd.rs  run.rs  runtime.rs  server.rs  server_auth.rs  server_install.rs  server_pkg_install.rs  server_storage.rs  source_cmd.rs  source_index.rs  source_service.rs  upgrade.rs
web/: app.js  index.html  styles.css
(+145 files in other folders)
