[package]
name = "mcm"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Like a Linux package manager for Minecraft mods"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "tower-log", "query"] }
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
toml = "0.8"
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["trace", "limit", "fs"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
